--- a/Dashboard.App/Dashboard.App.csproj
+++ b/Dashboard.App/Dashboard.App.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
     <PackageReference Include="Microsoft.Graph" Version="5.68.0" />
     <PackageReference Include="Microsoft.Identity.Web.TokenCache" Version="3.6.2" />
+    <PackageReference Include="Microsoft.Kiota.Bundle" Version="1.17.1" />
   </ItemGroup>
 
 </Project>
